package hallserver_player;

//协议主码 本服独有协议 占用 101-654 公共占用1-50 游戏公共占用50-100
enum main {
	hallserver_player = 101;
}
//协议子码 req res 占用1-80  通知占用80-100
enum sub {
    HeartReq            = 1;              //心跳
    PlayerInfoNotice    = 80;             //玩家信息通知
    PlayerInfoSynNotice = 81;             //玩家字段信息同步
}

//心跳包
message HeartReq {
	optional int64 time = 1;
}

//玩家信息通知
message PlayerInfoNotice {
    optional string nickname = 1;       //昵称
    optional int32 rank_score = 2;      //段位积分
}

message oneSynInfo {
    optional string field_name = 1;     //字段名
    optional int32 is_str      = 2;     //是否字符串
    optional string value_str  = 3;     //string值
    optional int64 value       = 4;     //number值
}

//玩家信息字段同步通知
message PlayerInfoSynNotice {
    repeated oneSynInfo synList = 1;
}