package hallserver_hall;

//心跳包
message HeartReq {
	optional int64 time = 1;
}

/*
    匹配成功 接受 流程
    1. c2s MatchGameReq
    2. s2s hallserver 2 matchserver 请求匹配
    3. s2c MatchGameRes
    4. s2s matchserver 2 hallserver 匹配成功
    5. s2c MatchGameNotice 
    6. c2s AcceptMatchReq
    7. s2c AcceptMatchRes
    8. s2c JoinGameNotice

    匹配成功 超时 流程
    1. c2s MatchGameReq
    2. s2s hallserver 2 matchserver 请求匹配
    3. s2c MatchGameRes
    4. s2s matchserver 2 hallserver 匹配成功
    5. s2c MatchGameNotice 
    6. s2s hallserver 2 matchserver 请求匹配(没有超时的继续请求匹配)

    匹配服 匹配流程
    1. 等待满足条件玩家人数
    2. 找到合适的游戏服
    3. s2s matchserver 2 gameserver 创建房间
    4. s2s gameserver  2 hallserver 查询所需玩家信息
    5. s2s gameserver rsp matchserver 创建成功
    6. s2s matchserver 2 hallserver 匹配成功 
*/

//请求匹配游戏
message MatchGameReq {
    optional int32 game_id = 1;
}

//回应匹配游戏
message MatchGameRes {
    optional int32 game_id = 1;
}

//取消匹配游戏
message CancelMatchGameReq {
    optional int32 game_id = 1;
}
//回应取消匹配游戏
message CancelMatchGameRes {
    optional int32 game_id = 1;
}

//通知匹配成功
message MatchGameNotice {
    optional int32   game_id     = 1;  //游戏ID
    optional string  session_id  = 2;  //匹配成功的会话ID
    optional int32   remain_time = 3;  //接受倒计时
}

//请求接受匹配
message AcceptMatchReq {
    optional int32  game_id      = 1;  //游戏ID
    optional string session_id   = 2;  //匹配成功的会话ID
}

//回应接受匹配
message AcceptMatchRes {
    optional int32  game_id      = 1;  //游戏ID
    optional string session_id   = 2;  //匹配成功的会话ID
}

//通知进入游戏
message JoinGameNotice {
    optional string  gamehost    = 1;  //游戏服的连接信息
    optional string  gametoken   = 2;  //游戏服的登录token
    optional string  table_id    = 3;  //桌子ID
}